--- a/lab07/css/style.css
+++ b/lab07/css/style.css
@@ -27,3 +27,12 @@ a:hover{
 #sp {
 	color: #fdb306;
 }
+#list{
+	font-size: 14px;
+
+}
+#list a:hover{
+	text-decoration: none;
+	color: #b9f605; 
+
+}
